--- a/20220312 面向对象分析与设计/NOTE - 220314 - 1 对象模型.md
+++ b/20220312 面向对象分析与设计/NOTE - 220314 - 1 对象模型.md
@@ -14,7 +14,7 @@
 * 并发
 * 持久化
 
-> 毫无疑问，面向对象分析和设计在本质上与传统的结构化设计方法是不同的：它要求一种不同的方式来思考分解，它得到的软件架构基本上超出了结构化设计的领域
+> 毫无疑问，面向对象分析和设计在本质上与传统的结构化设计方法是不同的：它要求以一种不同的方式来思考分解，它得到的软件架构基本上超出了结构化设计的领域
 
 
 
@@ -104,7 +104,9 @@
 
 ### 什么是面向对象，什么是不能面向对象？
 
-基本概念：对象统一了算法抽象和数据抽象的思想
+对象是面向对象的核心。
+
+对象的基本概念：对象统一了算法抽象和数据抽象的思想
 
 >在对象模型中，重点在于灵活地刻画物理系统或抽象系统的组件，用一个程序系统来建模....对象具有某种‘完整性’，这种完整性不应违反，实际上也不能违反
 >
@@ -165,7 +167,7 @@
 
 
 
-### 2.2.2 面向对象编程
+### 2.2.2 面向对象设计
 
 #### 什么是OOD？
 
