--- a/211020 面向对象的思考过程（5th）/1.⭐面向对象的概念简介.md
+++ b/211020 面向对象的思考过程（5th）/1.⭐面向对象的概念简介.md
@@ -1,6 +1,6 @@
 1.1 基本概念
 
-“经典的”面向对象 拥有的特性
+“经典的”面向对象语言拥有以下特性
 
 * 封装（encapsulation）
 * 继承（inheritance）
@@ -27,3 +27,12 @@
 
 > 在面向对象设计中，属性及行为包含在单个对象中，而在过程式或结构式设计中，属性和行为通常是分开的。
 
+
+
+
+
+1.8 封装和数据隐藏
+
+> 封装是基于对象既包含属性也包含行为这一事实定义的。数据隐藏是封装的主要部分。
+>
+> 接口和实现 是封装的本质。
