--- a/231117 实现领域驱动设计/StrategicDesign-01-Bounded Context.adoc
+++ b/231117 实现领域驱动设计/StrategicDesign-01-Bounded Context.adoc
@@ -1,3 +1,12 @@
+理解领域、子域、限界上下文
+
+领域既可以表示整个业务系统，也可以表示其中的某个核心域或者支撑子域。
+几乎所有软件的领域都包含多个子域，这和软件系统本身的复杂性没有太大关系。
+
+核心域、子域（支撑子域和通用子域）
+
+
+
 限界上下文（Bounded Context）是语义和语境的边界。边界内的每个代表软件模型的组件都有着特定的含义并处理特定的事务。
 
 问题空间（Problem Space）和解决方案空间（Solution Space）
@@ -5,4 +14,8 @@
 解决方案空间是真正实施解决方案的地方，这些解决方案在问题空间讨论中被识别为核心域（Core-domain）
 核心域是限界上下文被当作组织的关键战略举措进行开发时。
 
+
 通用语言（Ubiquitous Language）是团队在限界上下文中发展了一种语言用于表达其边界内的软件模型，这一语言由在该限界上下文中开发软件模型的每个成员所使用。
+
+限界上下文是一个显示边界，领域模型便存在于边界之内。
+领域模型把通用语言表达成软件模型
