--- a/231117 实现领域驱动设计/StrategicDesign-01-Bounded Context.adoc
+++ b/231117 实现领域驱动设计/StrategicDesign-01-Bounded Context.adoc
@@ -1,4 +1,10 @@
 
+战略设计的重要性
+. 学习领域、子域和限界上下文
+. 学习问题空间和解决方案空间
+. 学到了如何利用限界上下文分离模型
+. 学到了如何正确处理限界上下文的大侠，如何构建可以部署的限界上下文
+
 == 理解领域、子域、限界上下文
 
 领域（Domain）既可以表示整个业务系统，也可以表示其中的某个核心域或者支撑子域。
@@ -10,7 +16,20 @@
 限界上下文是一个显示边界，领域模型便存在于边界之内。
 限界上下文是显示的并充满语义的。
 不要试图创建一个大而全的软件模型（如每种概念在全局范围之内只有一种定义）。
-限界上下文不规定只能创建一种类型的项目工件。它不是一个独立的组件，文档或者简图。
+限界上下文不规定创建一种类型的项目工件。它不是一个独立的组件，文档或者示意图。
+模型是限界上下文的主要公民，除此之外，它通常把一个系统、应用程序或者一个业务服务划开，有时包含的内容很少，比如一个通用子域可以只包含领域模型。
+
+一个限界上下文可能包括的内容：
+
+. 当领域模型驱动数据库schema的设计，数据库schema应在该模型所处的上下文边界之内
+. 当UserInterface被用于渲染模型并且驱动模型的行为设计时，User Interface应在该模型所在的上下文边界之内
+. 使用Open Host Service（REST资源）或者SOAP或消息服务端点与模型交互，这些面向服务的组件都应该位于上下文边界之内
+. 应用服务也是位于上下文边界之内的
+
+导致创建大小不正确的限界上下文的因素
+. 错误地采用架构来指导设计开发，而不是通用语言
+. 根据开发任务的分配来拆分限界上下文
+. 没有考虑领域专家采用语言划分上下文边界的方式
 
 === 问题空间（Problem Space）和解决方案空间（Solution Space）
 问题空间是在给定项目的约束条件下进行高级战略分析与设计各个步骤的地方。
@@ -49,7 +68,20 @@
 . 标识支撑子域、通用子域
 . 不时地向领域专家提问纠正
 
-=== 思考问题空间是什么
+=== 在项目中考虑问题空间
 问题空间是战略核心域和支撑它的子域的组合。
 
-=== 在你的解决方案空间里，限界上下文是什么
+=== 在解决方案空间里明确限界上下文
+
+=== 标识限界上下文中区别微小的概念
+* 在多种限界上下文中，识别出微小区别的概念
+* 查明这些概念是否做出正确地分离，或者在两边做简单的代码复制开发。
+
+=== 标识边界内的非领域模型组件
+* A User Interface 或 A set of Application services
+* database schema 或 other persistence store
+* 模块、聚合、领域事件或领域服务等领域模型中的基础部件
+
+=== 绘制限界上下文
+* 使用通用语言进行考虑，并为你的模型绘制一个限界上下文
+* 填上主要领域的概念，发现遗漏的概念和不应该出现的概念，并解决它们
