--- a/231117 实现领域驱动设计/StrategicDesign-03-Context Mapping.adoc
+++ b/231117 实现领域驱动设计/StrategicDesign-03-Context Mapping.adoc
@@ -1,16 +1,21 @@
 上下文映射（Context Mapping）：核心域和其他限界上下文进行的集成关系。
 连接两个限界上下文之间的线段代表了上下文映射。这条线段表示这两个限界上下文之间存在着某种形式的映射，包括两个限界上下文之间的集成关系以及团队间的动态关系。也代表着两个限界上下文里存在的不同通用语言的转译过程。
 
+
+上下文映射图不是一种企业架构，也不是系统拓扑图，它可以用于高层次的架构分析，指出诸如集成瓶颈之类的架构不足。
+
+
 上下文映射的种类：
 
 * 合作关系（Partnership）：存在于两个团队之间保持的相互紧密的合作关系。
-* 共享内核（SharedKernel）：两个（或更多）团队之间共享着一个小规模但却通用的模型
-* 客户供应商（Customer-Supplier）：两个限界上下文之间和两个独立团队之间的一种关系：上游供应商（U），下游客户（D）
-* 跟随者（Conformist）：存在于上游团队和下游团队之间，上游团队没有任何动机满足下游团队的具体需求
-* 防腐层（Anti-corruptionLayer）：下游团队在其通用语言（模型）和位于它上游的通用语言（模型）之间创建了一个翻译层，是最具防御性的上下文关系。防腐层隔离了下游模型与上游模型，并完成两者之间的翻译。
-* 开放主机服务（OpenHostService）：定义一套协议或接口，让限界上下文可以被当作一组服务访问。
-* 已发布语言（PublishedLanguage）：一种有着丰富文档的信息交换语言，可以被许多消费方的限界上下文简单地使用和翻译。
-* 各行其道（SeparateWay）：描述了一种情况，使用各种通用语言来与一个或多个限界上下文集成这样的方式不能产生显著的回报。
+* 共享内核（Shared Kernel）：两个（或更多）团队之间共享着一个小规模但却通用的模型
+* 客户供应商开发（Customer-Supplier Development）：两个限界上下文之间和两个独立团队之间的一种关系：上游供应商（U），下游客户（D）
+* 跟随者/遵奉者（Conformist）：存在于上游团队和下游团队之间，上游团队没有任何动机满足下游团队的具体需求
+* 防腐层（Anti-corruption Layer）：下游团队在其通用语言（模型）和位于它上游的通用语言（模型）之间创建了一个翻译层，是最具防御性的上下文关系。防腐层隔离了下游模型与上游模型，并完成两者之间的翻译。
+* 开放主机服务（Open Host Service）：定义一套协议或接口，让限界上下文可以被当作一组服务访问。
+* 已发布语言（Published Language）：一种有着丰富文档的信息交换语言，可以被许多消费方的限界上下文简单地使用和翻译。
+* 各行其道/另谋他路（Separate Way）：描述了一种情况，使用各种通用语言来与一个或多个限界上下文集成这样的方式不能产生显著的回报。
+* 大泥球（Big Ball of Mud）：系统中存在混在在一起的模型，并且模型之间的边界是非常模糊的。
 
 
 三种更可靠的集成方式：
@@ -21,3 +26,18 @@
 
 
 领域事件如何与消息机制一起使用
+
+
+== 白板时间（Whiteboard Time）
+
+=== 绘制框图
+* 不同的限界上下文、上下文之间的关系、各个上下文的团队、上下文之间的集成和必要的翻译
+
+=== 明确限界上下文的概念以及集成关系
+* 标识出不应该归属与某个限界上下文的概念
+* 在9种DDD组织和集成关系选择一种/多种，并说明原因
+
+
+=== 创建翻译图（translation map）
+在你的项目中的限界上下文里，找到一个你感兴趣的集成面创建一个翻译图
+
